Update ignored files

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -8,28 +8,28 @@ Wallpapers/
 Wallpapers/**
 README.md
 {{- if eq .chezmoi.os "darwin" }}
-dot_config/gtk-3.0
-dot_config/gtk-3.0/**
-dot_config/hypr/
-dot_config/hypr/**
-dot_config/paru/
-dot_config/paru/**
-dot_config/rofi/
-dot_config/rofi/**
-dot_config/swaync/
-dot_config/swaync/**
-dot_config/waybar/
-dot_config/waybar/**
-dot_config/wlogout/
-dot_config/wlogout/**
-dot_config/kdeglobals
-dot_config/private_mimeapps.list
-private_dot_local/bin/change_wallpaper.sh
+.config/gtk-3.0
+.config/gtk-3.0/**
+.config/hypr/
+.config/hypr/**
+.config/paru/
+.config/paru/**
+.config/rofi/
+.config/rofi/**
+.config/swaync/
+.config/swaync/**
+.config/waybar/
+.config/waybar/**
+.config/wlogout/
+.config/wlogout/**
+.config/kdeglobals
+.config/mimeapps.list
+.local/bin/change_wallpaper.sh
 {{- if eq .chezmoi.os "windows" }}
-dot_config/
-dot_config/**
-private_dot_local/
-private_dot_local/**
-dot_gitconfig
-dot_zshrc.tmpl
+.config/
+.config/**
+.local/
+.local/**
+.gitconfig
+.zshrc
 {{- end }}
