--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -25,8 +25,7 @@ README.md
 .config/kdeglobals
 .config/mimeapps.list
 .local/bin/change_wallpaper.sh
-{{- end }}
-{{- if eq .chezmoi.os "windows" }}
+{{- else if eq .chezmoi.os "windows" }}
 .config/
 .config/**
 .local/
