--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -7,7 +7,7 @@ Fonts/**
 Wallpapers/
 Wallpapers/**
 README.md
-{{- if eq .chezmoi.os "darwin" }}
+{{- if eq .chezmoi.os "linux" }}
 .config/yabai/yabairc
 {{- else if eq .chezmoi.os "darwin" }}
 .config/gtk-3.0
