--- a/dot_config/gtk-3.0/settings.ini
+++ b/dot_config/gtk-3.0/settings.ini
@@ -1,8 +1,8 @@
 [Settings]
-gtk-theme-name=rose-pine-gtk
-gtk-icon-theme-name=rose-pine-icons
+gtk-theme-name=Adwaita
+gtk-icon-theme-name=Adwaita
 gtk-font-name=Noto Sans 10
-gtk-cursor-theme-name=Adwaita
+gtk-cursor-theme-name=BreezeX-RosePine-Linux
 gtk-cursor-theme-size=20
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
