--- a/.chezmoidata/linux.yaml
+++ b/.chezmoidata/linux.yaml
@@ -59,6 +59,7 @@ linux:
     - "ncdu"
     - "neofetch"
     - "os-prober"
+    - "tldr"
     - "zoxide"
     - "zsh-autosuggestions"
     - "zsh-syntax-highlighting"
