--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -23,12 +23,13 @@ set -g renumber-windows on
 set -g set-clipboard on
 set -g default-terminal "${TERM}"
 set -g mouse on
-set -g status-position top
+set -g escape-time 0
+# set -g status-position top
 # set -g detach-on-destroy off
 
 # Key bindings
-bind H previous-window
-bind L next-window
+bind -n M-H previous-window
+bind -n M-L next-window
 
 bind h select-pane -L
 bind j select-pane -D
@@ -55,7 +56,7 @@ set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
 
 set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_modules_right "directory user host"
+set -g @catppuccin_status_modules_right "directory user host "
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
