--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -34,11 +34,11 @@ behind = "[ ](lavender)"
 diverged = "[󰃻 ](maroon)"
 conflicted = "[ ](red)"
 staged = "[ ](green)"
-deleted = "[ ](yellow)"
-renamed = "[ ](yellow)"
+deleted = "[ ](yellow)"
+renamed = "[ ](yellow)"
 modified = "[ ](yellow)"
-typechanged = "[ ](yellow)"
-untracked = "[ ](yellow)"
+typechanged = "[ ](yellow)"
+untracked = "[ ](yellow)"
 
 [palettes.catppuccin_mocha]
 rosewater = "#f5e0dc"
