--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -27,6 +27,9 @@ set -g escape-time 0
 # set -g status-position top
 # set -g detach-on-destroy off
 
+# Restore tmux on startup
+set -g @continuum-restore 'on'
+
 # Key bindings
 bind -n M-H previous-window
 bind -n M-L next-window
