--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -38,7 +38,7 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind H split-window -v -c "#{pane_current_path}"
+bind S split-window -v -c "#{pane_current_path}"
 bind V split-window -h -c "#{pane_current_path}"
 
 bind C copy-mode
@@ -58,7 +58,7 @@ set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
 
-set -g @catppuccin_status_modules_right "session directory user host"
+set -g @catppuccin_status_modules_right "directory session"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_status_fill "icon"
