--- a/.chezmoidata/macos.yaml
+++ b/.chezmoidata/macos.yaml
@@ -32,8 +32,9 @@ macos:
     - "bat"
     - "btop"
     - "eza"
-    - "skhd"
     - "yabai"
+    - "skhd"
+    - "borders"
     - "sketchybar"
     - "fzf"
     - "lf"
