--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -12,6 +12,9 @@ README.md
 .config/skhd/**
 .config/sketchybar/
 .config/sketchybar/**
+.config/whkdrc
+applications.yaml
+komorebi.json
 {{- else if eq .chezmoi.os "darwin" }}
 .config/gtk-3.0
 .config/gtk-3.0/**
@@ -33,10 +36,42 @@ README.md
 .config/wlogout/**
 .config/kdeglobals
 .config/mimeapps.list
+.config/whkdrc
 .local/bin/change_wallpaper.sh
+applications.yaml
+komorebi.json
 {{- else if eq .chezmoi.os "windows" }}
-.config/
-.config/**
+.config/gtk-3.0
+.config/gtk-3.0/**
+.config/hypr/
+.config/hypr/**
+.config/kitty/
+.config/kitty/**
+.config/paru/
+.config/paru/**
+.config/qt5ct/
+.config/qt5ct/**
+.config/qt6ct/
+.config/qt6ct/**
+.config/rofi/
+.config/rofi/**
+.config/sketchybar/
+.config/sketchybar/**
+.config/skhd/
+.config/skhd/**
+.config/swaync/
+.config/swaync/**
+.config/tmux/
+.config/tmux/**
+.config/waybar/
+.config/waybar/**
+.config/wlogout/
+.config/wlogout/**
+.config/yabai/
+.config/yabai/**
+.config/kdeglobals
+.config/mimeapps.list
+.config/starship.toml
 .local/
 .local/**
 .gitconfig
