--- a/.chezmoidata/windows.yaml
+++ b/.chezmoidata/windows.yaml
@@ -1,7 +1,11 @@
 windows:
   apps:
     - "Discord.Discord"
+    - "GitHub.cli"
+    - "LGUG2Z.komorebi"
+    - "LGUG2Z.whkd"
     - "Microsoft.PowerToys"
+    - "Microsoft.PowerShell"
     - "Microsoft.VisualStudioCode"
     - "Nvidia.GeForceExperience"
     - "TheBrowserCompany.Arc"
