--- a/.chezmoidata/linux.yaml
+++ b/.chezmoidata/linux.yaml
@@ -51,13 +51,13 @@ linux:
     - "cliphist"
     - "eza"
     - "fancontrol-gui"
+    - "fastfetch"
     - "fzf"
     - "gparted"
     - "imagemagick"
     - "lf"
     - "man"
     - "ncdu"
-    - "neofetch"
     - "os-prober"
     - "tldr"
     - "zoxide"
