--- a/.chezmoidata/macos.yaml
+++ b/.chezmoidata/macos.yaml
@@ -37,8 +37,8 @@ macos:
     - "borders"
     - "sketchybar"
     - "fzf"
+    - "fastfetch"
     - "lf"
-    - "neofetch"
     - "tldr"
     - "ripgrep"
     - "starship"
