--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -12,6 +12,7 @@ windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
 
 windowrulev2 = float,title:^(Picture-in-Picture)$
+windowrulev2 = float,title:^(Friends List)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,class:^(qt5ct)$
 windowrulev2 = float,class:^(qt6ct)$
