--- a/.chezmoidata/linux.yaml
+++ b/.chezmoidata/linux.yaml
@@ -100,6 +100,7 @@ linux:
   flatpaks:
     - "com.discordapp.Discord"
     - "com.ticktick.TickTick"
+    - "com.usebottles.bottles"
     - "md.obsidian.Obsidian"
     - "org.gnome.Calculator"
     - "org.gnome.Calendar"
