--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -7,12 +7,13 @@ set -g prefix C-Space
 bind C-Space send-prefix
 
 # List of plugins
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'catppuccin/tmux#latest'
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'alexwforsythe/tmux-which-key'
 
 # Options
 set -g base-index 1
