--- a/.chezmoidata/windows.yaml
+++ b/.chezmoidata/windows.yaml
@@ -9,5 +9,5 @@ windows:
     - "RiotGames.LeagueOfLegends.EUW"
     - "Spotify.Spotify"
     - "Valve.Steam"
-    - "Vendicated.Vencord.PTB"
+    - "Vendicated.Vencord"
     - "Zen-Team.Zen-Browser"
