--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -11,22 +11,48 @@
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
 
-env = QT_QPA_PLATFORMTHEME,qt5ct
+# env = QT_QPA_PLATFORMTHEME,qt5ct
 env = MOZ_ENABLE_WAYLAND,1
+
+# █░░ ▄▀█ █▄█ █▀█ █░█ ▀█▀ █▀
+# █▄▄ █▀█ ░█░ █▄█ █▄█ ░█░ ▄█
+
+dwindle {
+    pseudotile = true
+    preserve_split = true
+}
+
+master {
+    new_status = master
+}
+
+# █▀▄▀█ █ █▀ █▀▀
+# █░▀░█ █ ▄█ █▄▄
+
+misc {
+    # vrr = 0
+    force_default_wallpaper = 0
+    disable_hyprland_logo = true
+    # disable_splash_rendering = true
+}
 
 # █ █▄░█ █▀█ █░█ ▀█▀
 # █ █░▀█ █▀▀ █▄█ ░█░
 
 input {
     kb_layout = us
+    kb_variant =
+    kb_model =
+    kb_options =
+    kb_rules =
 
     follow_mouse = 1
+
+    sensitivity = 0
 
     touchpad {
         natural_scroll = false
     }
-
-    sensitivity = 0
 }
 
 gestures {
@@ -37,29 +63,6 @@ gestures {
 device {
     name = epic-mouse-v1
     sensitivity = -0.5
-}
-
-# █░░ ▄▀█ █▄█ █▀█ █░█ ▀█▀ █▀
-# █▄▄ █▀█ ░█░ █▄█ █▄█ ░█░ ▄█
-
-dwindle {
-    pseudotile = true
-    preserve_split = true
-    force_split = 2
-}
-
-master {
-    new_is_master = true
-}
-
-# █▀▄▀█ █ █▀ █▀▀
-# █░▀░█ █ ▄█ █▄▄
-
-misc {
-    vrr = 0
-    disable_hyprland_logo = true
-    disable_splash_rendering = true
-    force_default_wallpaper = 0
 }
 
 # █▀ █▀█ █░█ █▀█ █▀▀ █▀▀
