--- a/dot_config/hypr/theme.conf
+++ b/dot_config/hypr/theme.conf
@@ -6,7 +6,8 @@
 # exec = hyprctl setcursor Bibata-Modern-Ice 20
 # exec = gsettings set org.gnome.desktop.interface cursor-theme 'Bibata-Modern-Ice'
 # exec = gsettings set org.gnome.desktop.interface cursor-size 20
-
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
 
 # █▀▀ █▀█ █▄░█ ▀█▀
 # █▀░ █▄█ █░▀█ ░█░
@@ -30,31 +31,35 @@ general {
     border_size = 2
     col.active_border = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
     col.inactive_border = rgba(31748fcc) rgba(9ccfd8cc) 45deg
-    layout = dwindle
     resize_on_border = true
     allow_tearing = false
-}
-
-group {
-    col.border_active = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
-    col.border_inactive = rgba(31748fcc) rgba(9ccfd8cc) 45deg
-    col.border_locked_active = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
-    col.border_locked_inactive = rgba(31748fcc) rgba(9ccfd8cc) 45deg
+    layout = dwindle
 }
 
 decoration {
     rounding = 10
-    drop_shadow = false
-    dim_special = 0.3
+
+    active_opacity = 1.0
+    inactive_opacity = 1.0
+
+    drop_shadow = true
+    shadow_range = 4
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
+
+    # dim_special = 0.3
 
     blur {
         enabled = true
-        size = 6
-        passes = 3
+        size = 3
+        passes = 1
         vibrancy = 0.1696
-        new_optimizations = on
-        ignore_opacity = on
-        xray = false
-        special = true
     }
 }
+
+# group {
+#     col.border_active = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
+#     col.border_inactive = rgba(31748fcc) rgba(9ccfd8cc) 45deg
+#     col.border_locked_active = rgba(eb6f92ff) rgba(c4a7e7ff) 45deg
+#     col.border_locked_inactive = rgba(31748fcc) rgba(9ccfd8cc) 45deg
+# }
