--- a/dot_config/hypr/launch.conf
+++ b/dot_config/hypr/launch.conf
@@ -1,8 +1,8 @@
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
-exec-once = swww init
-exec-once = sh ~/.local/bin/change_wallpaper.sh ~/.local/share/chezmoi/Wallpapers
+exec-once = swww-daemon
+exec-once = sleep .5 && sh ~/.local/bin/change_wallpaper.sh ~/.local/share/chezmoi/Wallpapers
 exec-once = waybar
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = wl-paste --type text --watch cliphist store
