--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -23,7 +23,7 @@ bind = $mainMod, delete, exit,
 bind = $mainMod SHIFT, C, exec, cliphist list | rofi -dmenu -i | cliphist decode | wl-copy
 
 # Toggle waybar
-bind = $CONTROL, ESCAPE, exec, killall waybar || waybar
+bind = $mainMod $CONTROL, ESCAPE, exec, killall waybar || waybar
 
 # Run wlogout
 bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 --protocol layer-shell -m 400
