--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -9,12 +9,14 @@ windowrulev2 = opacity 0.90 0.90,class:^(vesktop)$
 windowrulev2 = opacity 0.80 0.80,class:^(obsidian)$
 windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.90 0.90,class:^(zen-alpha)$
+windowrulev2 = opacity 0.90 0.90,class:^(steam)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
 
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = float,title:^(Friends List)$
+windowrulev2 = float,title:^(Steam Settings)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,class:^(qt5ct)$
 windowrulev2 = float,class:^(qt6ct)$
