--- a/dot_config/hypr/monitors.conf
+++ b/dot_config/hypr/monitors.conf
@@ -2,5 +2,5 @@
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄ ▄█
 
 monitor=,preferred,auto,auto
-monitor=HDMI-A-1,2560x1440@120,0x0,1
-monitor=DP-3,2560x1440@120,2560x0,1
+monitor=DP-3,2560x1440@120,0x0,1,vrr,2
+monitor=HDMI-A-1,2560x1440@120,2560x0,1
