--- a/dot_config/hypr/monitors.conf
+++ b/dot_config/hypr/monitors.conf
@@ -1,6 +1,9 @@
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█ █▀
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄ ▄█
 
-monitor=,preferred,auto,auto
+# monitor=,preferred,auto,auto
 monitor=DP-3,2560x1440@120,0x0,1,vrr,2
 monitor=HDMI-A-1,2560x1440@120,2560x0,1
+
+workspace = 1, monitor:DP-3, default:true
+workspace = 2, monitor:HDMI-A-1
