--- a/.chezmoidata/windows.yaml
+++ b/.chezmoidata/windows.yaml
@@ -6,8 +6,9 @@ windows:
     - "Microsoft.PowerShell"
     - "Microsoft.VisualStudioCode"
     - "Nvidia.GeForceExperience"
+    - "qBittorrent.qBittorrent"
     - "RiotGames.LeagueOfLegends.EUW"
     - "Spotify.Spotify"
     - "Valve.Steam"
-    - "Vendicated.Vencord"
+    - "Vencord.Vesktop"
     - "Zen-Team.Zen-Browser"
