--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -11,7 +11,7 @@
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
 
-# env = QT_QPA_PLATFORMTHEME,qt5ct
+env = QT_QPA_PLATFORMTHEME,qt6ct
 env = MOZ_ENABLE_WAYLAND,1
 
 # █░░ ▄▀█ █▄█ █▀█ █░█ ▀█▀ █▀
