--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -14,10 +14,13 @@ windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
 
+windowrulev2 = opacity 1 1,class:^(zen-alpha)$,title:^(.*Zen Browser Private Browsing*.)$
+
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = float,title:^(Friends List)$
 windowrulev2 = float,title:^(Steam Settings)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
+windowrulev2 = float,class:^(zen-alpha)$,title:^(Library)$
 windowrulev2 = float,class:^(qt5ct)$
 windowrulev2 = float,class:^(qt6ct)$
 windowrulev2 = float,class:^(nwg-look)$
