--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -15,6 +15,7 @@ windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
 
 windowrulev2 = opacity 1 1,class:^(zen-alpha)$,title:^(.*Zen Browser Private Browsing*.)$
+windowrulev2 = opacity 1 1,class:^(firefox)$,title:^(.*Mozilla Firefox Private Browsing*.)$
 
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = float,title:^(Friends List)$
