--- a/.chezmoidata/linux.yaml
+++ b/.chezmoidata/linux.yaml
@@ -110,4 +110,5 @@ linux:
     - "org.gnome.Calculator"
     - "org.gnome.Calendar"
     - "org.gnome.eog"
+    - "org.gnome.Weather"
     - "org.kde.ark"
