--- a/dot_config/hypr/windowrules.conf
+++ b/dot_config/hypr/windowrules.conf
@@ -13,6 +13,7 @@ windowrulev2 = opacity 0.90 0.90,class:^(steam)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Weather)$
 
 windowrulev2 = opacity 1 1,class:^(zen-alpha)$,title:^(.*Zen Browser Private Browsing*.)$
 windowrulev2 = opacity 1 1,class:^(firefox)$,title:^(.*Mozilla Firefox Private Browsing*.)$
@@ -29,6 +30,7 @@ windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
 windowrulev2 = float,class:^(org.gnome.Calculator)$
 windowrulev2 = float,class:^(org.gnome.Calendar)$
+windowrulev2 = float,class:^(org.gnome.Weather)$
 
 windowrulev2 = opacity 1 1,fullscreen: 1
 
