--- a/dot_config/hypr/keybindings.conf
+++ b/dot_config/hypr/keybindings.conf
@@ -20,7 +20,7 @@ bind = $mainMod SHIFT, P, pseudo,
 bind = $mainMod, delete, exit,
 
 # Clipboard
-bind = $mainMod SHIFT, C, exec, cliphist list | rofi -dmenu -i | cliphist decode | wl-copy
+bind = $mainMod, C, exec, cliphist list | rofi -dmenu -i | cliphist decode | wl-copy
 
 # Toggle waybar
 bind = $mainMod $CONTROL, ESCAPE, exec, killall waybar || waybar
