--- a/dot_config/hypr/conf/keybindings.conf
+++ b/dot_config/hypr/conf/keybindings.conf
@@ -10,11 +10,12 @@ bind = $mainMod, T, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, F, togglefloating,
-bind = $mainMod, Space, exec, $menu
+bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, C, exec, cliphist list | rofi -dmenu -i | cliphist decode | wl-copy
 bind = $mainMod, backspace, exec, wlogout -b 2 -c 0 -r 0 --protocol layer-shell -m 400
+bind = $mainMod, TAB, overview:toggle all
 bind = $mainMod CONTROL, M, exit,
 bind = $mainMod CONTROL, W, exec, killall waybar || waybar
 
