--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -14,3 +14,4 @@ source ./conf/look-and-feel.conf
 source ./conf/input.conf
 source ./conf/keybindings.conf
 source ./conf/windows-and-workspaces.conf
+source ./conf/plugins.conf
