--- a/.chezmoidata/apps.yaml
+++ b/.chezmoidata/apps.yaml
@@ -1,6 +1,7 @@
-packages:
-  - "firefox"
-  - "zen-browser-bin"
-  - "vesktop"
-  - "steam"
-  - "gnome-calculator"
+apps:
+  packages:
+    - "firefox"
+    - "zen-browser-bin"
+    - "vesktop"
+    - "steam"
+    - "gnome-calculator"
