--- a/.chezmoidata/dev.yaml
+++ b/.chezmoidata/dev.yaml
@@ -1,13 +1,14 @@
-packages:
-  - "nvm"
-  - "go"
-  - "github-cli"
-  - "kitty"
-  - "neovim"
-  - "tmux"
-  - "lazygit"
-  - "bruno"
-  # - "docker"
-  # - "docker-compose"
-  # - "nvidia-container-toolkit"
-  # - "ollama-cuda"
+dev:
+  packages:
+    - "nvm"
+    - "go"
+    - "github-cli"
+    - "kitty"
+    - "neovim"
+    - "tmux"
+    - "lazygit"
+    - "bruno"
+    # - "docker"
+    # - "docker-compose"
+    # - "nvidia-container-toolkit"
+    # - "ollama-cuda"
