--- a/.chezmoidata/environment.yaml
+++ b/.chezmoidata/environment.yaml
@@ -1,24 +1,25 @@
-packages:
-  - "hyprland"
-  - "cpio"
-  - "cmake"
-  - "sddm"
-  - "libnotify"
-  - "swaync"
-  - "pamixer"
-  - "pavucontrol"
-  - "xdg-desktop-portal-hyprland"
-  - "xdg-desktop-portal-gtk"
-  - "polkit-gnome"
-  - "qt5-wayland"
-  - "qt6-wayland"
-  - "python-gobject"
-  - "waybar"
-  - "swww"
-  - "rofi-wayland"
-  - "cliphist"
-  - "thunar"
-  - "eog"
-  - "wlogout"
-  - "gnome-calendar"
-  - "gnome-weather"
+environment:
+  packages:
+    - "hyprland"
+    - "cpio"
+    - "cmake"
+    - "sddm"
+    - "libnotify"
+    - "swaync"
+    - "pamixer"
+    - "pavucontrol"
+    - "xdg-desktop-portal-hyprland"
+    - "xdg-desktop-portal-gtk"
+    - "polkit-gnome"
+    - "qt5-wayland"
+    - "qt6-wayland"
+    - "python-gobject"
+    - "waybar"
+    - "swww"
+    - "rofi-wayland"
+    - "cliphist"
+    - "thunar"
+    - "eog"
+    - "wlogout"
+    - "gnome-calendar"
+    - "gnome-weather"
