--- a/.chezmoidata/system.yaml
+++ b/.chezmoidata/system.yaml
@@ -1,12 +1,13 @@
-packages:
-  - "linux-zen-headers"
-  - "zsh"
-  - "nvidia-dkms"
-  # - "nvidia-utils"
-  - "lib32-nvidia-utils"
-  # - "libva"
-  - "libva-nvidia-driver"
-  # - "egl-wayland"
-  - "pacman-contrib"
-  - "vi"
-  - "man"
+system:
+  packages:
+    - "linux-zen-headers"
+    - "zsh"
+    - "nvidia-dkms"
+    # - "nvidia-utils"
+    - "lib32-nvidia-utils"
+    # - "libva"
+    - "libva-nvidia-driver"
+    # - "egl-wayland"
+    - "pacman-contrib"
+    - "vi"
+    - "man"
