--- a/.chezmoidata/theme.yaml
+++ b/.chezmoidata/theme.yaml
@@ -1,14 +1,15 @@
-packages:
-  - "nwg-look"
-  - "qt5ct"
-  - "qt6ct"
-  # - "rose-pine-cursor"
-  - "rose-pine-gtk-theme-full"
-  - "sddm-theme-tokyo-night-git"
-  - "noto-fonts"
-  - "noto-fonts-cjk"
-  - "noto-fonts-emoji"
-  - "noto-fonts-extra"
-  - "ttf-hack-nerd"
-  - "ttf-noto-nerd"
-  - "starship"
+theme:
+  packages:
+    - "nwg-look"
+    - "qt5ct"
+    - "qt6ct"
+    # - "rose-pine-cursor"
+    - "rose-pine-gtk-theme-full"
+    - "sddm-theme-tokyo-night-git"
+    - "noto-fonts"
+    - "noto-fonts-cjk"
+    - "noto-fonts-emoji"
+    - "noto-fonts-extra"
+    - "ttf-hack-nerd"
+    - "ttf-noto-nerd"
+    - "starship"
