--- a/.chezmoidata/utilities.yaml
+++ b/.chezmoidata/utilities.yaml
@@ -1,19 +1,20 @@
-packages:
-  - "os-prober"
-  - "bat"
-  - "eza"
-  - "zoxide"
-  - "btop"
-  - "fd"
-  - "ripgrep"
-  - "fzf"
-  - "tldr"
-  - "fastfetch"
-  - "unzip"
-  - "mpv"
-  - "imagemagick"
-  - "ncdu"
-  - "gparted"
-  - "protonup-qt"
-  # - "fancontrol-gui"
-  # - "openrgb"
+utilities:
+  packages:
+    - "os-prober"
+    - "bat"
+    - "eza"
+    - "zoxide"
+    - "btop"
+    - "fd"
+    - "ripgrep"
+    - "fzf"
+    - "tldr"
+    - "fastfetch"
+    - "unzip"
+    - "mpv"
+    - "imagemagick"
+    - "ncdu"
+    - "gparted"
+    - "protonup-qt"
+    # - "fancontrol-gui"
+    # - "openrgb"
