--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -6,12 +6,12 @@
 # ╚═╝░░╚═╝░░░╚═╝░░░╚═╝░░░░░╚═╝░░╚═╝╚══════╝╚═╝░░╚═╝╚═╝░░╚══╝╚═════╝░
 # https://github.com/hyprwm/Hyprland/blob/main/example/hyprland.conf
 
-source ./conf/monitors.conf
-source ./conf/myprograms.conf
-source ./conf/autostart.conf
-source ./conf/environmentvariables.conf
-source ./conf/lookandfeel.conf
-source ./conf/input.conf
-source ./conf/keybindings.conf
-source ./conf/windowsandworkspaces.conf
-source ./conf/plugins.conf
+source = ./conf/monitors.conf
+source = ./conf/my-programs.conf
+source = ./conf/autostart.conf
+source = ./conf/environment-variables.conf
+source = ./conf/look-and-feel.conf
+source = ./conf/input.conf
+source = ./conf/keybindings.conf
+source = ./conf/windows-and-workspaces.conf
+source = ./conf/plugins.conf
