--- a/dot_config/hypr/conf/plugins.conf
+++ b/dot_config/hypr/conf/plugins.conf
@@ -3,8 +3,8 @@
 ###############
 
 plugin {
-    overview {
-        exitOnClick = true
-        exitOnSwitch = true
-    }
+    # overview {
+    #     exitOnClick = true
+    #     exitOnSwitch = true
+    # }
 }
