--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -5,10 +5,10 @@
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = swww-daemon
-exec-once = sleep 2 && ~/.local/bin/change_wallpaper.sh ~/Wallpapers
 exec-once = waybar
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
+exec-once = sleep 1 && ~/.local/bin/change_wallpaper.sh ~/.local/share/chezmoi/Wallpapers
 # exec-once = sleep 1 && hyprpm enable Hyprspace
 
 # https://github.com/swaywm/sway/wiki/GTK-3-settings-on-Wayland
