--- a/dot_config/hypr/conf/windows-and-workspaces.conf
+++ b/dot_config/hypr/conf/windows-and-workspaces.conf
@@ -14,10 +14,10 @@ windowrulev2 = opacity 0.90 0.90,class:^(vesktop)$
 windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.90 0.90,class:^(zen-alpha)$
 windowrulev2 = opacity 0.90 0.90,class:^(steam)$
-# windowrulev2 = opacity 0.80 0.70,class:^(org.kde.polkit-kde-authentication-agent-1)$
-# windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
-# windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
-# windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Weather)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Weather)$
+windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
 
 windowrulev2 = opacity 1 1,class:^(zen-alpha)$,title:^(.*Zen Browser Private Browsing*.)$
 
@@ -27,10 +27,10 @@ windowrulev2 = float,title:^(Steam Settings)$
 windowrulev2 = float,class:^(zen-alpha)$,title:^(Library)$
 windowrulev2 = float,class:^(nwg-look)$
 windowrulev2 = float,class:^(pavucontrol)$
-# windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
-# windowrulev2 = float,class:^(org.gnome.Calculator)$
-# windowrulev2 = float,class:^(org.gnome.Calendar)$
-# windowrulev2 = float,class:^(org.gnome.Weather)$
+windowrulev2 = float,class:^(org.gnome.Calculator)$
+windowrulev2 = float,class:^(org.gnome.Calendar)$
+windowrulev2 = float,class:^(org.gnome.Weather)$
+windowrulev2 = float,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
 
 windowrulev2 = opacity 1 1,fullscreen: 1
 
