--- a/dot_config/hypr/conf/my-programs.conf
+++ b/dot_config/hypr/conf/my-programs.conf
@@ -4,5 +4,5 @@
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $terminal = kitty --title Kitty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = rofi -show drun
