--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -11,9 +11,8 @@ exec-once = wl-paste --type image --watch cliphist store
 exec-once = sleep 1 && ~/.local/bin/change_wallpaper.sh ~/.local/share/chezmoi/Wallpapers
 # exec-once = sleep 1 && hyprpm enable Hyprspace
 
-# https://github.com/swaywm/sway/wiki/GTK-3-settings-on-Wayland
-# exec = gsettings set $gnome-schema gtk-theme 'Your theme'
-# exec = gsettings set $gnome-schema icon-theme 'Your icon theme'
-# exec = gsettings set $gnome-schema cursor-theme 'Your cursor Theme'
-# exec = gsettings set $gnome-schema font-name 'Your font name'
-exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'rose-pine-gtk'
+exec = gsettings set org.gnome.desktop.interface icon-theme 'rose-pine-icons'
+exec = gsettings set org.gnome.desktop.interface cursor-theme 'BreezeX-RosePineDawn-Linux'
+exec = gsettings set org.gnome.desktop.interface NotoSans Nerd Font 12
+# exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
