--- a/dot_config/hypr/conf/environment-variables.conf
+++ b/dot_config/hypr/conf/environment-variables.conf
@@ -3,10 +3,10 @@
 #############################
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
-env = XCURSOR_THEME,BreezeX-RosePine-Linux
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,rose-pine-hyprcursor
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME,'BreezeX-RosePineDawn-Linux'
+env = XCURSOR_SIZE,32
+# env = HYPRCURSOR_THEME,rose-pine-hyprcursor
+# env = HYPRCURSOR_SIZE,32
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
