--- a/.chezmoidata/environment.yaml
+++ b/.chezmoidata/environment.yaml
@@ -6,6 +6,7 @@ environment:
     - "sddm"
     - "libnotify"
     - "swaync"
+    - "syshud"
     - "pamixer"
     - "pavucontrol"
     - "xdg-desktop-portal-hyprland"
@@ -18,6 +19,7 @@ environment:
     - "swww"
     - "rofi-wayland"
     - "cliphist"
+    - "gvfs"
     - "thunar"
     - "eog"
     - "wlogout"
