--- a/dot_config/hypr/conf/autostart.conf
+++ b/dot_config/hypr/conf/autostart.conf
@@ -9,10 +9,12 @@ exec-once = waybar
 exec-once = wl-paste --type text --watch cliphist store
 exec-once = wl-paste --type image --watch cliphist store
 exec-once = sleep 1 && ~/.local/bin/change_wallpaper.sh ~/.local/share/chezmoi/Wallpapers
+exec-once = hyprctl setcursor BreezeX-RosePineDawn-Linux 30
+exec-once = syshud -p 'top-right' -i 24
 # exec-once = sleep 1 && hyprpm enable Hyprspace
 
 exec = gsettings set org.gnome.desktop.interface gtk-theme 'rose-pine-gtk'
 exec = gsettings set org.gnome.desktop.interface icon-theme 'rose-pine-icons'
 exec = gsettings set org.gnome.desktop.interface cursor-theme 'BreezeX-RosePineDawn-Linux'
-exec = gsettings set org.gnome.desktop.interface NotoSans Nerd Font 12
-# exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
+exec = gsettings set org.gnome.desktop.interface 'Noto Sans' 12
+exec = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
