--- a/dot_config/hypr/conf/environment-variables.conf
+++ b/dot_config/hypr/conf/environment-variables.conf
@@ -4,7 +4,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 env = XCURSOR_THEME,'BreezeX-RosePineDawn-Linux'
-env = XCURSOR_SIZE,32
+env = XCURSOR_SIZE,30
+env = HYPRCURSOR_SIZE,30
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
