--- a/dot_config/gtk-3.0/settings.ini
+++ b/dot_config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=rose-pine-gtk
 gtk-icon-theme-name=rose-pine-icons
-gtk-font-name=NotoSans Nerd Font 12
+gtk-font-name=Noto Sans 12
 gtk-cursor-theme-name=BreezeX-RosePineDawn-Linux
 gtk-cursor-theme-size=32
 gtk-toolbar-style=GTK_TOOLBAR_ICONS
