--- a/dot_config/hypr/conf/windows-and-workspaces.conf
+++ b/dot_config/hypr/conf/windows-and-workspaces.conf
@@ -42,5 +42,5 @@ windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinn
 
 layerrule = blur,waybar
 layerrule = blur,rofi
-# layerrule = ignorezero,rofi
+layerrule = ignorezero,rofi
 # layerrule = noanim,rofi
