--- a/dot_config/hypr/conf/windows-and-workspaces.conf
+++ b/dot_config/hypr/conf/windows-and-workspaces.conf
@@ -11,8 +11,8 @@
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 windowrulev2 = opacity 0.90 0.90,class:^(vesktop)$
-windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.90 0.90,class:^(zen-alpha)$
+windowrulev2 = opacity 0.90 0.90,class:^(firefox)$
 windowrulev2 = opacity 0.90 0.90,class:^(steam)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calculator)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Calendar)$
@@ -20,11 +20,13 @@ windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.Weather)$
 windowrulev2 = opacity 0.80 0.70,class:^(org.gnome.polkit-gnome-authentication-agent-1)$
 
 windowrulev2 = opacity 1 1,class:^(zen-alpha)$,title:^(.*Zen Browser Private Browsing*.)$
+windowrulev2 = opacity 1 1,class:^(firefox)$,title:^(.*Mozilla Firefox Private Browsing*.)$
 
 windowrulev2 = float,title:^(Picture-in-Picture)$
 windowrulev2 = float,title:^(Friends List)$
 windowrulev2 = float,title:^(Steam Settings)$
 windowrulev2 = float,class:^(zen-alpha)$,title:^(Library)$
+windowrulev2 = float,class:^(firefox)$,title:^(Library)$
 windowrulev2 = float,class:^(nwg-look)$
 windowrulev2 = float,class:^(pavucontrol)$
 windowrulev2 = float,class:^(org.gnome.Calculator)$
